Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18290

CMake project cannot be built (Error while building project/When executing step CMake build)

XMLWordPrintable

      With Qt Creator 4.3.0 I cannot build a CMake project at all. In 4.2.2 it was OK.

      The error message: 

      Error while building project xy
      When executing step "CMake build"
      

      CMake in command line works fine and also with the previous versions of Qt Creator.

      Also, Qt Creator shows "CMakeCache.txt" changed many times after cleaning the project (but possibly this is a separate issue).

      How can I help you debugging this problem further? I saw no other console output besides the error message.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hunger Tobias Hunger
            szotsaki Szőts Ákos
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes